--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                     <div class="banner-image">
                         <img src="justic.png" alt="">
                     </div>
+                    <div>
+                        <img src="women.png" alt="">
+                        <img src="man.png" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -91,11 +95,54 @@
                     <div>Explore our Retail Solutions</div>
                 </div>
                 <div class="offers-arrow">
-                    <button><img src="back-arrow.png" alt=""></button>
-                    <button><img src="front-arrow.png" alt=""></button>
+                    <button class="offers-arrow-back">
+                        <img src="back-arrow.png" alt="">
+                    </button>
+                    <button class="offers-arrow-forth">
+                        <img src="front-arrow.png" alt="">
+                    </button>
                 </div>
             </div>
-            <div></div>
+            <div>
+                <div class="cards">
+                    <div class="card">
+                        <img src="solution1.png" alt="explore">
+                        <div class="card-container">
+                          <b>Register a Business</b>
+                          <p>Registering A Business Entity Is The First Step To Turning Your Idea Into An Actual Business, 
+                            Let's Help You Start This Journey!</p>
+                          <b>Explore</b>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="solution2.png" alt="explore">
+                        <div class="card-container">
+                          <b>Register a Business</b>
+                          <p>Registering A Business Entity Is The First Step To Turning Your Idea Into An Actual Business, 
+                            Let's Help You Start This Journey!</p>
+                          <b>Explore</b>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="solution3.png" alt="explore">
+                        <div class="card-container">
+                          <b>Register a Business</b>
+                          <p>Registering A Business Entity Is The First Step To Turning Your Idea Into An Actual Business, 
+                            Let's Help You Start This Journey!</p>
+                          <b>Explore</b>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="solution4.png" alt="explore">
+                        <div class="card-container">
+                          <b>Register a Business</b>
+                          <p>Registering A Business Entity Is The First Step To Turning Your Idea Into An Actual Business, 
+                            Let's Help You Start This Journey!</p>
+                          <b>Explore</b>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div></div>
         </div>
     </div>
