--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;700&family=Rubik:wght@400;500;800&display=swap" rel="stylesheet">
     <title>PocketLawyer</title>
 </head>
 <body>
@@ -111,38 +111,61 @@
                           <b>Register a Business</b>
                           <p>Registering A Business Entity Is The First Step To Turning Your Idea Into An Actual Business, 
                             Let's Help You Start This Journey!</p>
-                          <b>Explore</b>
+                          <b style="text-decoration: underline;">Explore</b>
                         </div>
                     </div>
                     <div class="card">
                         <img src="solution2.png" alt="explore">
                         <div class="card-container">
-                          <b>Register a Business</b>
-                          <p>Registering A Business Entity Is The First Step To Turning Your Idea Into An Actual Business, 
-                            Let's Help You Start This Journey!</p>
-                          <b>Explore</b>
+                          <b>Post registration matters</b>
+                          <p>Sorting Out Those In-House Issues Are Essential To Any Thriving Business. We Are
+                            More Than Happy To Help, Shall We?!</p>
+                          <b style="text-decoration: underline;">Explore</b>
                         </div>
                     </div>
                     <div class="card">
                         <img src="solution3.png" alt="explore">
                         <div class="card-container">
-                          <b>Register a Business</b>
-                          <p>Registering A Business Entity Is The First Step To Turning Your Idea Into An Actual Business, 
-                            Let's Help You Start This Journey!</p>
-                          <b>Explore</b>
+                          <b>Intellectual Property 
+                            Protection</b>
+                          <p>Did You Know That Protecting Your Intellectual Property Could Enhance The Market
+                            Value Of Your Business. We Can Help You!</p>
+                          <b style="text-decoration: underline;">Explore</b>
                         </div>
                     </div>
                     <div class="card">
                         <img src="solution4.png" alt="explore">
                         <div class="card-container">
-                          <b>Register a Business</b>
-                          <p>Registering A Business Entity Is The First Step To Turning Your Idea Into An Actual Business, 
-                            Let's Help You Start This Journey!</p>
-                          <b>Explore</b>
+                          <b>Staff onboarding and 
+                            outboarding</b>
+                          <p>Employing Staff, Whatever Type And Terms, Without Proper Documentation, Is A
+                            Recipe For Internal Combustion And Finally, Disaster! Let's Help!</p>
+                          <b style="text-decoration: underline;">Explore</b>
                         </div>
                     </div>
                 </div>
             </div>
+            <div class="packages">
+                <div></div>
+                <div class="ellipses">
+                    <img src="ellipse1.png" alt="">
+                    <img src="ellipse2.png" alt="">
+                    <img src="ellipse3.png" alt="">
+                </div>
+                <div class="packages-button">
+                    <button>See All Packages</button>
+                </div>
+            </div>
+        </div>
+        <div class="reason">
+            <div class="reason-header">Why PocketLawyers.io?</div>
+            <div class="reason-description">a virtual law firm poised to democratize
+                access to premium legal solutions 
+               for SMEs and Startups.</div>
+        </div>
+        <div>
+            <div></div>
+            <div></div>
             <div></div>
         </div>
     </div>
