--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
                     <div class="banner-image">
                         <img src="justic.png" alt="">
                     </div>
-                    <div>
-                        <img src="women.png" alt="">
-                        <img src="man.png" alt="">
+                    <div class="banner-image-mini">
+                        <img class="banner-image-mini-man" src="women.png" alt="">
+                        <img class="banner-image-mini-woman" src="man.png" alt="">
                     </div>
                 </div>
             </div>
@@ -163,10 +163,38 @@
                 access to premium legal solutions 
                for SMEs and Startups.</div>
         </div>
-        <div>
-            <div></div>
-            <div></div>
-            <div></div>
+        <div class="resources">
+            <div class="resources-options">
+                <div>
+                    <div class="big-ellipse"><img src="frame.png" alt=""></div>
+                </div>
+                <p>Pre-Approved Lawyers</p>
+                <div>You have access to premium
+                    Lawyers you can trust. 
+                </div>
+            </div>
+            <div class="resources-options">
+                <div>
+                    <div class="big-ellipse"><img src="frame.png" alt=""></div>
+                </div>
+                <p>Resources and Templates</p>
+                <div>
+                    We provide businesses with free and premium reports, books, journals and documents. 
+                </div>
+            </div>
+            <div class="resources-options">
+                <div>
+                    <div class="big-ellipse"><img src="frame.png" alt=""></div>
+                </div>
+                <p>Confidential and Private</p>
+                <div>
+                    All matters shared with PocketLawyers.io are kept highly secure and private. 
+                </div>
+            </div>
+        </div>
+        <div class="budget">
+            <div class="budget-fit">We Fit Into Your Pocket, No Matter Your Budget.</div>
+            <div class="budget-choose">Choose Your Retainer Package</div>
         </div>
     </div>
 </body>
