--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;700&family=Rubik:wght@400;500;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;700&family=Inter&family=Rubik:wght@400;500;800&display=swap" rel="stylesheet">
     <title>PocketLawyer</title>
 </head>
 <body>
@@ -195,6 +195,27 @@
         <div class="budget">
             <div class="budget-fit">We Fit Into Your Pocket, No Matter Your Budget.</div>
             <div class="budget-choose">Choose Your Retainer Package</div>
+            <div class="business">
+                <div class="business-scale">
+                    <div class="big-ellipse"><img src="cube.png" alt=""></div>
+                    <p>Small Scale Business</p>
+                    <b>Viverra amet, aliquam pretium consequat. Viverra amet, aliquam pretium consequat.</b>
+                    <div class="explore">Explore</div>
+                </div>
+                <div class="business-scale">
+                    <div class="big-ellipse"><img src="cube.png" alt=""></div>
+                    <p>Small Scale Business</p>
+                    <b>Viverra amet, aliquam pretium consequat. Viverra amet, aliquam pretium consequat.</b>
+                    <div class="explore">Explore</div>
+                </div>
+            </div>
+            <div class="packages-button business-button">
+                <button>See All Packages</button>
+            </div>
+        </div>
+
+        <div>
+            
         </div>
     </div>
 </body>
