--- a/index.html
+++ b/index.html
@@ -214,8 +214,98 @@
             </div>
         </div>
 
-        <div>
-            
+        <div class="faqs">
+            <div>
+                <div>
+                    <div class="budget-fit">Frequently Asked Questions</div>
+                    <div class="budget-choose">FAQs</div>
+                </div>
+                <div class="questions">
+                    <img src="plus.png" alt="">
+                    <p>Who are We?</p>
+                </div>
+                <div class="questions">
+                    <img src="plus.png" alt="">
+                    <p>Why PocketLawyers?</p>
+                </div>
+                <div class="questions">
+                    <img src="plus.png" alt="">
+                    <p>Where can our services be accessed?</p>
+                </div>
+                <div class="questions">
+                    <img src="plus.png" alt="">
+                    <p>Where are you located?</p>
+                </div>
+                <div class="questions">
+                    <img src="plus.png" alt="">
+                    <p>What are your business hours?</p>
+                </div>
+                <div class="questions">
+                    <img src="plus.png" alt="">
+                    <p>Will the information I share be confidential?</p>
+                </div>
+                <div class="questions">
+                    <img src="plus.png" alt="">
+                    <p>Do you offer Startup Advisory?</p>
+                </div>
+            </div>
+            <div>
+                <img src="girl.png" alt="">
+            </div>
+        </div>
+
+        <div class="feedbacks">
+            <div>
+                <div class="budget-fit">Clients Feedback</div>
+                <div class="budget-choose">What People Are Saying About Us</div>
+            </div>
+            <div class="feedback-info">
+                <div class="feedback-clients">
+                    <div class="avatar">
+                        <img src="odeku.png" alt="">
+                        <div>
+                            <p>Adeola Odeku</p>
+                            <p>
+                                Business Analyst
+                            </p>
+                        </div>
+                    </div>
+                    <div class="quote">
+                        <img src="quote.png" alt="">
+                        <div>We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
+                    </div>
+                </div>
+                <div class="feedback-clients">
+                    <div class="avatar">
+                        <img src="ngozi.png" alt="">
+                        <div>
+                            <p>Adeola Odeku</p>
+                            <p>
+                                Business Analyst
+                            </p>
+                        </div>
+                    </div>
+                    <div class="quote">
+                        <img src="quote.png" alt="">
+                        <div>We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
+                    </div>
+                </div>
+                <div class="feedback-clients">
+                    <div class="avatar">
+                        <img src="osupa.png" alt="">
+                        <div>
+                            <p>Adeola Odeku</p>
+                            <p>
+                                Business Analyst
+                            </p>
+                        </div>
+                    </div>
+                    <div class="quote">
+                        <img src="quote.png" alt="">
+                        <div>We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
