--- a/index.html
+++ b/index.html
@@ -260,11 +260,11 @@
                 <div class="budget-choose">What People Are Saying About Us</div>
             </div>
             <div class="feedback-info">
-                <div class="feedback-clients">
+                <div class="feedback-clients men">
                     <div class="avatar">
                         <img src="odeku.png" alt="">
-                        <div>
-                            <p>Adeola Odeku</p>
+                        <div class="feedback-name">
+                            <b>Adeola Odeku</b>
                             <p>
                                 Business Analyst
                             </p>
@@ -275,26 +275,26 @@
                         <div>We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
                     </div>
                 </div>
-                <div class="feedback-clients">
+                <div class="feedback-clients middle">
                     <div class="avatar">
                         <img src="ngozi.png" alt="">
-                        <div>
-                            <p>Adeola Odeku</p>
+                        <div class="feedback-name">
+                            <b>Adeola Odeku</b>
                             <p>
                                 Business Analyst
                             </p>
                         </div>
                     </div>
                     <div class="quote">
-                        <img src="quote.png" alt="">
+                        <img src="quote-red.png" alt="">
                         <div>We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
                     </div>
                 </div>
-                <div class="feedback-clients">
+                <div class="feedback-clients men">
                     <div class="avatar">
                         <img src="osupa.png" alt="">
-                        <div>
-                            <p>Adeola Odeku</p>
+                        <div class="feedback-name">
+                            <b>Adeola Odeku</b>
                             <p>
                                 Business Analyst
                             </p>
@@ -305,6 +305,11 @@
                         <div>We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
                     </div>
                 </div>
+            </div>
+            <div class="ellipses-down">
+                <img src="ellipse1.png" alt="">
+                <img src="ellipse2.png" alt="">
+                <img src="ellipse3.png" alt="">
             </div>
         </div>
     </div>
