--- a/index.html
+++ b/index.html
@@ -312,6 +312,23 @@
                 <img src="ellipse3.png" alt="">
             </div>
         </div>
+
+        <footer>
+            <div>
+
+            </div>
+            <div></div>
+            <div></div>
+            <div></div>
+
+            <div class="footer-links">
+                <div>© 2022 Pocket Lawyers. All rights reserved</div>
+                <div class="footer-links-extra">
+                    <p>Privacy policy</p>
+                    <p>Term of service</p>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
