--- a/index.html
+++ b/index.html
@@ -272,37 +272,39 @@
                     </div>
                     <div class="quote">
                         <img src="quote.png" alt="">
-                        <div>We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
+                        <div class="quote-description">We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
                     </div>
                 </div>
                 <div class="feedback-clients middle">
                     <div class="avatar">
                         <img src="ngozi.png" alt="">
                         <div class="feedback-name">
-                            <b>Adeola Odeku</b>
+                            <b>Ngozi Nwabueze
+                                </b>
                             <p>
-                                Business Analyst
+                                Brand Strategist
                             </p>
                         </div>
                     </div>
                     <div class="quote">
                         <img src="quote-red.png" alt="">
-                        <div>We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
+                        <div class="quote-description">We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
                     </div>
                 </div>
                 <div class="feedback-clients men">
                     <div class="avatar">
                         <img src="osupa.png" alt="">
                         <div class="feedback-name">
-                            <b>Adeola Odeku</b>
+                            <b>Saheed Osupa
+                                </b>
                             <p>
-                                Business Analyst
+                                Startup Founder
                             </p>
                         </div>
                     </div>
                     <div class="quote">
                         <img src="quote.png" alt="">
-                        <div>We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
+                        <div class="quote-description">We appreciate the way you handle all our legal ignorance with patience and how you systematically help set a structure that safeguards our busines</div>
                     </div>
                 </div>
             </div>
@@ -314,12 +316,52 @@
         </div>
 
         <footer>
-            <div>
-
+            <div class="footer-content">
+                <div class="footer-items">
+                    <div class="footer-logo">
+                        <img src="footer-logo.png" alt="logo Icon">
+                    </div>
+                    <p>
+                        Suite 1, 319, Borno Way 
+                        off Herbert Macaulay Way, 
+                        Yaba, Lagos, Nigeria
+                    </p>
+                    <p>
+                        Email:
+                        hello@pocketlawyers.io
+                    </p>
+                    <p>
+                        Call:
+                        +234 916 803 6060
+                    </p>
+                </div>
+                <div class="footer-items">
+                    <b>Company</b>
+                    <p> About</p>
+                    <p>Pricing</p>
+                    <p>Services</p>
+                    <p>FAQ</p>
+                    <p>Help Center</p>
+                </div>
+                <div class="footer-items">
+                    <b>Useful Links</b>
+                    <p>Press</p>
+                    <p>Become a PL Affiliate</p>
+                    <p>General terms & conditions</p>
+                    <p>Payment terms & conditions</p>
+                    <p>Help Centre</p>
+                </div>
+                <div class="footer-items">
+                    <p>Subscribe</p>
+                    <p>
+                        <input type="email" name="" id=""> <button>Subscribe</button>
+                    </p>
+                    <p>Follow</p>
+                    <button>Facebook</button>
+                    <button>Instagram</button>
+                    <button>Twitter</button>
+                </div>
             </div>
-            <div></div>
-            <div></div>
-            <div></div>
 
             <div class="footer-links">
                 <div>© 2022 Pocket Lawyers. All rights reserved</div>
