--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 
         <footer>
             <div class="footer-content">
-                <div class="footer-items">
+                <div class="footer-items footer-address">
                     <div class="footer-logo">
                         <img src="footer-logo.png" alt="logo Icon">
                     </div>
@@ -327,7 +327,7 @@
                         Yaba, Lagos, Nigeria
                     </p>
                     <p>
-                        Email:
+                        Email: <br />
                         hello@pocketlawyers.io
                     </p>
                     <p>
@@ -352,14 +352,16 @@
                     <p>Help Centre</p>
                 </div>
                 <div class="footer-items">
-                    <p>Subscribe</p>
-                    <p>
-                        <input type="email" name="" id=""> <button>Subscribe</button>
+                    <b>Subscribe</b>
+                    <p class="footer-form">
+                        <input type="email" name="" id="" placeholder="Enter Your Email"> <button>Subscribe</button>
                     </p>
                     <p>Follow</p>
-                    <button>Facebook</button>
-                    <button>Instagram</button>
-                    <button>Twitter</button>
+                    <div class="footer-social-links">
+                        <button class="footer-social"> <img src="facebook.png" alt=""> Facebook</button>
+                        <button class="footer-social"> <img src="instagram.png" alt=""> Instagram</button>
+                        <button class="footer-social"> <img src="twitter.png" alt=""> Twitter</button>
+                    </div>
                 </div>
             </div>
 
