--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header-content">
                 <nav class="navbar">
                     <div class="menu">
-                        <div class="logo">
+                        <div class="logo-desktop">
                             <img src="images/logo-icon.png" alt="logo Icon">
                             <img src="images/logo.png" alt="Logo text"/>
                         </div>
@@ -31,11 +31,19 @@
                     <div class="login-button">
                         <button>Login</button>
                     </div>
+                    <div class="logo-mobile">
+                        <img src="images/logo-icon.png" alt="logo Icon">
+                        <img src="images/logo.png" alt="Logo text"/>
+                    </div>
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="hamburger">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
+                    </svg>
+                      
                 </nav>
                 <div class="notice-button">
                     <button>
                         <p class="notice-text"> <img src="images/info-icon.png" alt=""> <span>Find out about the newly updated resources.<span class="check">Check out</span></span> </p>
-                        <p> &#10006; </p>
+                        <p class="close-notice"> &#10006; </p>
                     </button>
                 </div>
                 <div class="banner">
@@ -356,7 +364,8 @@
                     <div class="footer-items">
                         <b>Subscribe</b>
                         <p class="footer-form">
-                            <input type="email" name="" id="" placeholder="Enter Your Email"> <button>Subscribe</button>
+                            <input type="email" name="" id="" placeholder="Enter Your Email"> 
+                            <button type="submit">Subscribe</button>
                         </p>
                         <p>Follow</p>
                         <div class="footer-social-links">
